--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
       <div class=" max-w-1338px flex items-center gap-6 mx-auto justify-between ">
         <a href="#"><img src="./img/header.svg" alt="" /></a>
 
-        <form class="flex gap-3 px-6 py-4 border max-w-[471px] w-full bg-  border-greey-600 rounded-[60px]" action="">
+        <form class="flex gap-3 px-6 py-4 border max-w-[471px] w-full bg-  border-greey-600 rounded-[60px] " action="">
             <button><img src="./img/header-btn.svg" alt=""></button>
-            <input class="w-full " placeholder="Search Rolling" type="text">
+            <input class="w-full outline-none" placeholder="Search Rolling" type="text">
         </form>
 
 
@@ -36,9 +36,9 @@
         <div class="">
           <img src="./img/hero.png" alt="" class="w-[889px] h-[490px] object-cover top-card-img">
         </div>
-        <div class="pt-12 px-12 pb-9  top-card">
-          <div class="flex items-center gap-3 max-w-360px mb-12">
-              <h2 class="leading-9 font-medium text-xl ">The circle's pristine cleanliness</h2>
+        <div class="pt-12 px-12 pb-9  top-card ">
+          <h2 class="leading-9 font-medium text-xl ">The circle's pristine cleanliness</h2>
+          <div class=" items-center gap-3 max-w-360px mb-12">
                 <img src="./img/oq-kepka.png" class="object-cover w-6 h-6" alt="">
                  <p class="text-base font-normal leading-4">Tung Tran</p>
           </div>
@@ -81,11 +81,11 @@
     </div>
 
     <section class="pb-24">
-      <div class="max-w-1338px mx-auto flex grid-cols-4 gap-8">
-        <div class="max-w-312px card-left pb-6 ">
+      <div class="max-w-1338px mx-auto flex grid-cols-4 gap-8 ">
+        <div class="max-w-312px card-left pb-6 flex flex-col">
           <img src="./img/card.png" alt="" class="mb-4 w-[312px] ">
           <p class="font-medium text-xl leading-7 mb-78px pl-5">3D Soft Curves</p>
-          <div class="flex pl-5 gap-6">
+          <div class="flex pl-5 gap-6 mt-auto">
              <div class="flex gap-2 mt-auto pr-34px items-center  ">
               <img src="./img/card-2.png" alt="" class="w-[24px] h-[24px]">
               <p class="text-base font-normal leading-4 text-gray-500">Esther Howard</p>
@@ -97,10 +97,10 @@
           </div>
         </div>
 
-        <div class="max-w-312px card-left pb-6">
+       <div class="max-w-312px card-left pb-6 flex flex-col">
           <img src="./img/card-3.png" alt="" class="mb-4 w-[312px] ">
           <p class="font-medium text-xl leading-7 mb-78px pl-5">The mystery of the black square</p>
-          <div class="flex pl-5 gap-6">
+          <div class="flex pl-5 gap-6 mt-auto">
              <div class="flex gap-2 mt-auto pr-34px items-center  ">
               <img src="./img/card-4-.png" alt="" class="w-[24px] h-[24px]">
               <p class="text-base font-normal leading-4 text-gray-500">Jenny Wilson</p>
@@ -112,10 +112,10 @@
           </div>
         </div>
 
-        <div class="max-w-312px card-left pb-6">
+        <div class="max-w-312px card-left pb-6 flex flex-col">
           <img src="./img/card-5.png" alt="" class="mb-4 w-[312px] ">
-          <p class="font-medium text-xl leading-7 mb-78px pl-5">3D Soft Curves</p>
-          <div class="flex pl-5 gap-6">
+          <p class="font-medium text-xl leading-7 mb-78px pl-5">Pink Cloud 🌥 </p>
+          <div class="flex pl-5 gap-6 mt-auto">
              <div class="flex gap-2 mt-auto pr-34px items-center  ">
               <img src="./img/card-5-.png" alt="" class="w-[24px] h-[24px]">
               <p class="text-base font-normal leading-4 text-gray-500">Floyd Miles</p>
@@ -127,13 +127,13 @@
           </div>
         </div>
 
-        <div class="max-w-312px card-left pb-6">
+        <div class="max-w-312px card-left pb-6 flex flex-col">
           <img src="./img/card-6.png" alt="" class="mb-4 w-[312px] ">
           <p class="font-medium text-xl leading-7 mb-78px pl-5">3D Ethereum</p>
-          <div class="flex pl-5 gap-6">
+          <div class="flex pl-5 gap-6 mt-auto">
              <div class="flex gap-2 mt-auto pr-34px items-center  ">
               <img src="./img/card-6-.png" alt="" class="w-[24px] h-[24px]">
-              <p class="text-base font-normal leading-4 text-gray-500">Esther Howard</p>
+              <p class="text-base font-normal leading-4 text-gray-500">Jane Cooper</p>
              </div>
              <div class="">
               <p class="text-base font-normal leading-6 text-gray-500">Current Bid</p>
@@ -141,14 +141,13 @@
              </div>
           </div>
         </div>
-
         
       </div>
     </section>
 
     <div class="max-w-1338px flex items-center justify-between mx-auto mb-9">
       <img src="./img/Featured ✨.svg" alt="" class="">
-      <p class="text-xl font-normal leading-7 text-gray-500">View all</p>
+      <a href="#" class="text-xl font-normal leading-7 text-gray-500">View all</a>
     </div>
 
     <section class="pb-7">
@@ -336,21 +335,24 @@
         </div>
 
         <div class="pt-7  max-w-1338px mx-auto">
-          <p class="px-16 py-4 loadmore text-base font-medium leading-6 ">Load More</p>
+          <a href="#" class="px-16 py-4 loadmore text-base font-medium leading-6 ">Load More</a>
         </div>
 
       </div>
     </section>
 
     <div class="max-w-1338px flex items-center justify-between mx-auto mt-9 mb-9">
-      <p class="font-medium text-xl">Top Creators</p>
-      <p class="text-xl font-normal leading-7 text-gray-500">View all</p>
+      <a href="#" class="font-medium text-xl">Top Creators</a>
+      <a href="#" class="text-xl font-normal leading-7 text-gray-500">View all</p>
     </div>
 
     <section class="">
       <div class="max-w-1338px mx-auto ">
         <div class="">
-          
+          <img src="./img/futer-card.png" alt="">
+          <div class="">
+            <img src="./img/oq-kepka.png" alt="" class="w-[56px] object-cover">
+          </div>
         </div>
 
       </div>
